Finish layout and styling Finished the styling and layout of announcements and trending cards, and added icons to the dashboard and fixed some margins and spacing.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -28,36 +30,60 @@ ul {
   display: grid;
   grid-template-columns: 1fr 5fr;
   min-height: 100vh;
-  /* border: solid 4px purple; */
 }
 
 .container-sidebar {
   display: grid;
+  position: sticky;
+  font-weight: bold;
+  top: 0;
+  height: 100vh;
   grid-template-rows: auto auto auto;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 20px;
   align-content: start;
-  font-family: sans-serif;
+  font-family: Roboto, sans-serif;
   grid-row: 1 / 2;
   gap: 40px;
   /* border: solid 4px green; */
   background-color: #1992d4;
   color: white;
+  z-index: 1;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 15px;
+}
+.sidebar-header-logo {
+  height: 40px;
+  filter: invert(100%) brightness(200%);
+}
+li {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.sidebar-icons {
+  height: 20px;
+  filter: invert(100%) brightness(200%);
 }
 .sidebar-header {
-  margin-top: 5px;
+  font-size: 25px;
+
 }
 .container-nav,
 .container-settings {
   display: grid;
-  gap: 10px;
+  gap: 20px;
 }
 
 .container-main-content {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 2fr 2fr;
-  font-family: sans-serif;
-  /* border: solid 4px red; */
+  grid-template-rows: auto 1fr;
+  font-family: Roboto, sans-serif;
   background: #e2e8f0;
 }
 .container-main-header {
@@ -67,31 +93,29 @@ ul {
   box-shadow:
     0 4px 8px 0 rgba(0, 0, 0, 0.1),
     0 6px 20px 0 rgba(0, 0, 0, 0.07);
-  /* border: solid; */
   background: white;
 }
 .container-projects {
-  margin: 10px;
-  grid-row: 2 / 4;
-  /* border: solid; */
-  /* background: red; */
+  margin: 20px;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  padding-top: 20px;
 }
-.container-announce {
-  margin: 10px;
-  /* border: solid; */
-  background: green;
+.container-announcements {
+  margin: 20px;
+  grid-row: 2 / 3;
+  padding-top: 20px;
 }
 .container-trending {
-  margin: 10px;
-  /* border: solid; */
-  background: blue;
+  margin: 20px;
+  grid-row: 3 / 4;
 }
 .search-container {
   display: grid;
   grid-template-rows: auto auto;
-  align-content: space-around;
-  padding-left: 40px;
-  /* border: solid purple 2px; */
+  align-content: center;
+  gap: 40px;
+  padding: 30px;
 }
 .search label {
   display: none;
@@ -147,7 +171,7 @@ ul {
 .profile-link {
   display: flex;
   font-weight: bold;
-  gap: 20px;
+  gap: 30px;
   justify-content: end;
   margin-right: 80px;
   align-items: center;
@@ -176,7 +200,7 @@ ul {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(clamp(250px, 48%, 100%), 1fr));
   gap: 20px;
-  padding-top: 20px;
+  /* border: solid red; */
 }
 .card-item {
   display: grid;
@@ -194,12 +218,14 @@ ul {
     0 6px 20px 0 rgba(0, 0, 0, 0.07);
   min-height: 200px;
   width: 100%;
+  /* border: solid; */
 }
 .card-content {
   display: grid;
   grid-template-rows: 1fr auto;
   gap: 30px;
   margin: 30px;
+  /* border: solid orange; */
 }
 .card-buttons {
   display: flex;
@@ -211,4 +237,78 @@ ul {
 }
 .card-body-content p {
   color: #767676;
+}
+.another-container {
+  padding-top: 20px;
+}
+.container-announce {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  background: white;
+  border-radius: 10px;
+  overflow-y: auto;
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.1),
+    0 6px 20px 0 rgba(0, 0, 0, 0.07);
+  padding: 10px 30px;
+  /* border: red solid; */
+}
+.announcement-card-container {
+  display: grid;
+  justify-content: start;
+  border-bottom: 1px solid #e2e8f0;
+  padding: 10px 0;
+
+  /* border: solid; */
+}
+.announcement-card-container:last-child {
+  border-bottom: none;
+}
+.announcement p {
+  color: #767676;
+}
+.right-sidebar-content {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-right: 20px;
+}
+.container-trend {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  background: white;
+  border-radius: 10px;
+  overflow-y: auto;
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.1),
+    0 6px 20px 0 rgba(0, 0, 0, 0.07);
+  padding: 10px 30px;
+}
+.trending-content {
+  color: #767676;
+}
+.trending {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto auto;
+  column-gap: 15px;
+  align-items: center;
+  margin: 10px;
+}
+.trending img {
+  grid-row: 1 / 3;
+  height: 50px;
+}
+.trending p {
+  font-weight: bold;
+  font-size: 0.9rem;
+}
+.trending .trending-content {
+  color: #767676;
+  font-weight: normal;
+  font-size: 0.85rem;
 }
